--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.6
+  device_preview: ^1.2.0
+  get: ^4.6.6
+  font_awesome_flutter: ^10.4.0
+  dio: ^5.6.0
+  flutter_bloc: ^8.1.6
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  bottom_navy_bar: ^6.1.0
+  carousel_slider: ^5.0.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
