--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  device_preview: ^1.2.0
   get: ^4.6.6
   font_awesome_flutter: ^10.4.0
   dio: ^5.6.0
@@ -20,6 +19,7 @@ dependencies:
   bottom_navy_bar: ^6.1.0
   carousel_slider: ^5.0.0
   cached_network_image: ^3.2.3
+  path_provider_android: ^2.2.10
 
 dev_dependencies:
   flutter_test:
@@ -28,3 +28,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
