--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: plant_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ">=3.4.4 <4.0.0"
 
 dependencies:
   flutter:
@@ -20,7 +20,6 @@ dependencies:
   carousel_slider: ^5.0.0
   cached_network_image: ^3.2.3
   path_provider_android: ^2.2.10
-
 
 dev_dependencies:
   flutter_test:
