--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   carousel_slider: ^5.0.0
   cached_network_image: ^3.2.3
   path_provider_android: ^2.2.10
+  flashy_tab_bar2: ^0.0.10
 
 dev_dependencies:
   flutter_test:
