--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,3 +64,8 @@ configurations.all {
     resolutionStrategy.force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
     resolutionStrategy.force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22'
 }
+android {                                                                                     
+    defaultConfig {                                                                             
+    minSdkVersion 23                                                                          
+   }                                                                                           
+ }      
