--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   path_provider_android: ^2.2.10
   flashy_tab_bar2: ^0.0.10
   firebase_core: ^3.5.0
+  firebase_auth: ^5.3.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
