--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_auth: ^5.3.0
   google_sign_in: ^6.2.1
   plant_icons: ^0.0.3
+  firebase_messaging: ^15.1.3
+  awesome_dialog: ^3.2.1
 
 dev_dependencies:
   flutter_test:
