--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,9 +60,12 @@ dependencies {
     implementation "androidx.fragment:fragment:1.7.0" // Ensure the latest version
     implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.7.0" // Ensure the latest version
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0" // Ensure the latest version
-    implementation 'com.google.android.gms:play-services-auth:20.5.0' // Latest version
+    implementation 'com.google.android.gms:play-services-auth:20.7.0' // Latest version
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0' // Latest version of Firebase
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.2" // Latest Coroutines version
+    implementation 'com.google.android.gms:play-services-base:18.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+
 }
 
 configurations.all {
