--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,9 @@ android {
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
     buildTypes {
         release {
