--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   timezone: ^0.9.4
   permission_handler: ^10.2.0
   cloud_firestore: ^5.4.3
+  shimmer: ^3.0.0
   
 dev_dependencies:
   flutter_test:
