--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   permission_handler: ^10.2.0
   cloud_firestore: ^5.4.3
   shimmer: ^3.0.0
-  
+  image_picker: ^1.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -42,7 +43,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/logoWithoutText.png"  
+  image_path: "assets/images/logoWithoutText.png"
 
 flutter:
   uses-material-design: true
