--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^5.4.3
   shimmer: ^3.0.0
   image_picker: ^1.1.2
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
