--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   shimmer: ^3.0.0
   image_picker: ^1.1.2
   google_generative_ai: ^0.4.6
+  path_provider: ^2.0.11
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
